# zero2prod

./: Cargo.toml  README.md  spec.yaml
configuration/: local.yaml
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
